[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI/scenes/GameOverScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/scripts/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/assets/roboto_outline.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/scenes/LifeRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/scenes/FPSLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/assets/Roboto-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GUI/scenes/PauseScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/scripts/flash.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_amount = 0.0

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_amount = 0.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_amount = 0.0

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "new wave"
length = 0.333333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 30, 0 ), Vector2( 0, 0 ) ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesContainer" type="HBoxContainer" parent="."]
margin_left = 18.0
margin_top = 20.0
margin_right = 354.0
margin_bottom = 84.0
rect_scale = Vector2( 0.04, 0.04 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="LivesContainer" instance=ExtResource( 4 )]
material = SubResource( 2 )
margin_bottom = 1162.0

[node name="TextureRect2" parent="LivesContainer" instance=ExtResource( 4 )]
material = SubResource( 3 )
margin_left = 1028.0
margin_right = 2052.0
margin_bottom = 1162.0

[node name="TextureRect3" parent="LivesContainer" instance=ExtResource( 4 )]
material = SubResource( 4 )
margin_left = 2056.0
margin_right = 3080.0
margin_bottom = 1162.0

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" parent="." instance=ExtResource( 5 )]
margin_left = -121.0
margin_top = 66.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )

[node name="WaveContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.5
margin_right = 76.5
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveLabel" type="Label" parent="WaveContainer"]
margin_left = 42.0
margin_top = 21.0
margin_right = 111.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
text = "wave 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaveContainer/WaveLabel"]
anims/Idle = SubResource( 5 )
"anims/new wave" = SubResource( 6 )

[node name="StartLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.5
margin_top = -17.5
margin_right = 141.5
margin_bottom = 17.5
custom_fonts/font = ExtResource( 3 )
text = "Press Any Button to Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" parent="." instance=ExtResource( 1 )]

[node name="GameOverTimer" type="Timer" parent="."]

[node name="PauseScreen" parent="." instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -30.0
